--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,11 @@
     <string name="phone_input_hint">Mobile Number</string>
     <string name="registration_apom">APOM REGISTRATION</string>
     <string name="name_input_hint">Full Name</string>
-    <string name="test_toast_message">Some one clicked the register button</string>
+    <string name="message">this is a test message</string>
+    <string name="mobile_number_is_empty">Mobile number is empty</string>
+    <string name="password_is_empty">Password is empty</string>
+    <string name="password_is_short">Pasword field must be greater than or equal to 6 in chars</string>
+    <string name="mobile_number_is_valid">Mobile number is an Indian mobile number</string>
+    <string name="mobile_number_is_not_valid">Mobile is not a valid number</string>
 
 </resources>
